<resources>
    <string name="app_name">HotelManagementSystem-mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    FacilitiesBooking String-->
    <string name="bar_categories">Categories</string>
    <string name="date_picker">dd MMM yyyy</string>
    <string name="date">Date :</string>
    <string name="six_zero">60</string>
    <string name="one_two_zero">120</string>
    <string name="one_eight_zero">180</string>
    <string name="minutes">Minutes</string>
    <string name="sc_minutes">minutes</string>
    <string name="time_duration">Time Duration :</string>
    <string name="selection">Select Your</string>
    <string name="select_court">Court</string>
    <string name="select_room">Room</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="check_available">Check Available</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="agree_TC"><u>I agree with term and condition</u></string>
    <string name="successfully_msg">Well done, you have successfully book</string>
    <string name="voucher_code_hint">Enter Your Voucher Code</string>
    <string name="booking_title"><u>BOOKING TERMS &amp; CONDITIONS</u></string>
    <string name="ping_pong_tAndC"><b>PING PONG: </b>
        <br />
        The amount of people you have in your group size will determine the amount of tables and the length of time we can allocate you.
        Our tables have been designed for our customers to eat, drink and play around the tables with enough standing space for up to 20 people.
        around the tables with enough standing space for up to 20 people.
        <br />
        <br />
        At the time of booking, we will charge:
        <br />
        RM 6 per person for groups of 2-29
        <br />
        RM5 per person for groups of 30+
        <br />
        <br />
        <b>Any changes or cancellations are not refundable</b>
    </string>

    <string name="badminton_tAndC"><b>BADMINTON : </b>
        <br />
        The amount of people you have in your group size will determine the amount of tables and the length of time we can allocate you.
        Our tables have been designed for our customers to eat, drink and play around the tables with enough standing space for up to 20 people.
        around the tables with enough standing space for up to 20 people.
        <br />
        <br />
        At the time of booking, we will charge:
        <br />
        RM 6 per person for groups of 2-29
        <br />
        RM5 per person for groups of 30+
        <br />
        <br />
        <b>Any changes or cancellations are not refundable</b>
    </string>

    <string name="snooker_tAndC"><b>SNOOKER: </b>
        <br />
        The amount of people you have in your group size will determine the amount of tables and the length of time we can allocate you.
        Our tables have been designed for our customers to eat, drink and play around the tables with enough standing space for up to 20 people.
        around the tables with enough standing space for up to 20 people.
        <br />
        At the time of booking, we will charge:
        <br />
        RM 6 per person for groups of 2-29
        <br />
        RM5 per person for groups of 30+
        <br />
        <b>Any changes or cancellations are not refundable</b>

    </string>
    <string name="gaming_room_tAndC"><b>GAMING ROOM: </b>
        <br />
        The amount of people you have in your group size will determine the amount of tables and the length of time we can allocate you.
        Our tables have been designed for our customers to eat, drink and play around the tables with enough standing space for up to 20 people.
        around the tables with enough standing space for up to 20 people.
        <br />
        At the time of booking, we will charge:
        <br />
        RM 6 per person for groups of 2-29
        <br />
        RM5 per person for groups of 30+
        <br />
        <b>Any changes or cancellations are not refundable</b>

    </string>
    <string name="board_game_tAndC"><b>BOARD GAME: </b>
        <br />
        The amount of people you have in your group size will determine the amount of tables and the length of time we can allocate you.
        Our tables have been designed for our customers to eat, drink and play around the tables with enough standing space for up to 20 people.
        around the tables with enough standing space for up to 20 people.
        <br />
        At the time of booking, we will charge:
        <br />
        RM 6 per person for groups of 2-29
        <br />
        RM5 per person for groups of 30+
        <br />
        <br />
        <b>Any changes or cancellations are not refundable</b>

    </string>

    <string name="fully_book">Sorry Current Selected Booking is Full</string>
    <string name="preference_file">com.example.hotelmanagementsystem_mobile.activities.facilities_booking.preferenceFile</string>

    <!--Below are Error message for Facilities Booking module Use-->
    <string name="date_error">* Date can only select within 30 days</string>
    <string name="require_error">* This fields must required</string>
    <string name="time_slot_require_error">* Please choose a time slot</string>
    <string name="voucher_incorrect_error">* Please enter a valid voucher</string>
    <string name="voucher_require">* Please enter a voucher code</string>
    <string name="check_TAC">* Please tick the T&amp;C above</string>

    <!--Admin facilities Booking String-->
    <string name="facilities_booking">Facilities Booking</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>

    <!--e_voucher-->
    <string name="e_voucher">E-Voucher</string>

    <!-- Base Activity String -->
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <!-- Check in Activity String -->
    <string name="content_description">image</string>
    <string name="recently_check_in_title">Recently Check in</string>
    <string name="check_in_title">Check in</string>
    <string name="tv_check_in_hint">Enter Your Check in ID</string>
    <string name="tv_reservation_id_add_hint">Please enter your reservation id</string>
    <string name="btn_check_in_add">ADD</string>
    <string name="check_in_username">Username</string>
    <string name="check_in_ic_no_or_passport">IC NO/PASSPORT</string>
    <string name="check_in_reservation_id">Reservation ID</string>
    <string name="check_in_details_reservation_number">Reservation Number</string>
    <string name="check_in_details_night">Nights</string>
    <string name="check_in_details_reservation_details">Reservation Details</string>
    <string name="check_in_details_room_types">Room Types</string>
    <string name="check_in_details_date_and_time">Check In Date and Time</string>
    <string name="check_in_details_check_in_id">Check In ID</string>
    <string name="tv_check_in_reservation_id">Enter your reservation ID</string>
    <string name="btn_check_in_confirm">CONFIRM</string>
    <string name="check_in_term_and_condition"><u>I agree with terms and conditions</u></string>
    <string name="check_in_details_title">Check In Details</string>
    <string name="booking_details_preference_file">com.example.hotelmanagementsystem_mobile.activities.preferenceFile</string>

    <!-- Check Out Activity String -->
    <string name="check_out_title">Check Out</string>
    <string name="tv_check_out_deposits">Deposit</string>
    <string name="tv_check_out_ask_user">Are you sure want to check out now ?</string>
    <string name="tiet_confirm_check_out_hint">Enter "Confirm" to check out</string>
    <string name="btn_check_out_confirm">CHECK OUT</string>
    <string name="check_out_details_dialog_id">Check Out ID</string>
    <string name="check_out_details_dialog_date_and_time">Check Out Date and Time</string>
    <string name="only_first_user">Only check in user can check out.</string>

    <!-- Admin -->
    <string name="admin_check_in_details_title">Check In Details</string>
    <string name="admin_check_out_details_title">Check Out Details</string>
    <string name="tv_admin_check_in_search_hint">Search by Check in ID</string>
    <string name="tv_admin_check_out_search_hint">Search by Check Out ID</string>
    <string name="btn_admin_search_text">Search</string>
    <string name="tv_total_text_check_in_today">Today\'s Check In :</string>
    <string name="tv_total_text_check_in_other_day">Other\'s Day Check In :</string>
    <string name="tv_total_text_check_out_today">Today\'s Check Out :</string>
    <string name="tv_total_text_check_out_other_day">Other\'s Day Check Out :</string>
    <string name="tv_total_text_check_in_out_result">Search Result :</string>

    <!-- User -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign up to Get Started</string>
    <string name="ic_num">IC/Passport Number</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="noAccount">Don\'t have an account? Sign Up</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">Reset Password</string>
    <string name="EmailReset">Enter your Email to Reset Password</string>
    <string name="update">Update</string>
    <string name="editProfile">Edit Profile</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="booking_history">Booking History</string>
    <string name="checkout_history">Check Out History</string>
    <string name="dashboard">Dashboards</string>
</resources>