<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context=".activities.AdminFacilitiesBooking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:text="@string/date_picker"
            android:textColor="@color/black"
            android:textSize="30sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtViewAdminDateErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:gravity="center_vertical"
        android:text="@string/require_error"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAdminCheckFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp" />

</LinearLayout>
