<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_gravity="start"
    android:background="@color/card_background_color">

    <LinearLayout
        android:id="@+id/check_in_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dialog_title_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/check_in_title"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_username"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_check_in_dialog_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start"
                android:textSize="15sp"
                android:typeface="normal"
                android:background="@color/dialog_text_view_background_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_ic_no_or_passport"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_check_in_dialog_ic_no_or_passport"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start"
                android:textSize="15sp"
                android:typeface="normal"
                android:background="@color/dialog_text_view_background_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_reservation_id"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_check_in_dialog_reservation_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start"
                android:textSize="15sp"
                android:typeface="normal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_check_in_dialog_terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@android:color/white"
            android:text="@string/check_in_term_and_condition"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_check_in_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_color"
            android:text="@string/btn_check_in_confirm"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>


</LinearLayout>